# bugreports

./: .gitignore  README.md
asyckill/: asyckill.cabal  stack.yaml
asyckill/src/: Lib.hs
asyckill/test/: Spec.hs
blackhole/: README.md  debuglog_tail_only.txt  stack.yaml
blackhole/loop/: loop.cabal
blackhole/loop/app/: Main.hs
ghc_free/: stack.yaml
ghc_free/x/: LICENSE  x.cabal
ghc_free/x/src/: Lib.hs
