name:                loop
version:             0.1.0.0
license:             BSD3
author:              Robin Palotai
maintainer:          palotai.robin@gmail.com
copyright:           2017 Robin Palotai
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable loop-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N4"
  -- -eventlog -debug
  build-depends:       base
                     , prometheus-client
  default-language:    Haskell2010
